--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "thermite-aligner"
-version = "0.1.0"
-edition = "2018"
 description = "RNA aligner in Rust."
+edition = "2018"
+name = "thermite-aligner"
+resolver = "2"
+version = "0.1.0"
 
 [lib]
 name = "thermite_aligner"
@@ -13,10 +14,22 @@ name = "thermite"
 path = "src/main.rs"
 
 [dependencies]
-clap = { version = "^3.0.0-beta.2", features = ["derive"] }
 anyhow = "^1.0.42"
+bincode = "^1.3.3"
+bio = "^0.37.0"
+clap = {version = "^3.0.0-beta.2", features = ["derive"]}
 needletail = "^0.4.1"
 rayon = "^1.5.1"
-bio = "^0.37.0"
-serde = { version = "^1.0", features = ["derive"] }
-bincode = "^1.3.3"
+serde = {version = "^1.0", features = ["derive"]}
+
+[profile.dev]
+opt-level = 3
+split-debuginfo = "unpacked"
+
+[profile.release]
+codegen-units = 1
+debug = 1
+lto = true
+
+[profile.test]
+opt-level = 3
