--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ clap = {version = "^3.0.0-beta.2", features = ["derive"]}
 needletail = "^0.4.1"
 rayon = "^1.5.1"
 serde = {version = "^1.0", features = ["derive"]}
+noodles = {version = "^0.1.0", features = ["gff", "sam", "bam", "core"]}
 
 [profile.dev]
 opt-level = 3
