--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,13 @@ path = "src/main.rs"
 anyhow = "^1.0.42"
 bincode = "^1.3.3"
 bio = "^0.37.0"
+bio-types = "^0.12.0"
 clap = { version = "^3.0.0-beta.2", features = ["derive"] }
 needletail = "^0.4.1"
 noodles = { version = "^0.1.0", features = ["bam", "core", "gff", "sam"] }
 rayon = "^1.5.1"
 serde = { version = "^1.0", features = ["derive"] }
+transcriptome = { version = "^0.1.0", git = "https://github.com/10XDev/cellranger" }
 
 [profile.dev]
 opt-level = 3
