Remove pylint for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,9 @@ jobs:
           git config --global credential.helper store
       - name: Check Python black formatting
         run: ~/.local/bin/black --check --diff ./ lib/testing/*py
-      - name: Check for pylint errors
-        run: >
-          pylint --rcfile=.pylintrc lib/testing/*py;
+      # - name: Check for pylint errors
+      #   run: >
+      #     pylint --rcfile=.pylintrc lib/testing/*py;
       - name: Install cargo/rustc
         run: |
           case $(rustc --version) in
