Add chrM metric comparison

--- a/data/Makefile
+++ b/data/Makefile
@@ -7,7 +7,7 @@ export PATH:=../target/debug:${PATH}
 ref=test_ref
 
 # The minimum seed length.
-k=3
+k=10
 
 SHELL=bash -e -o pipefail
 ifneq ($(shell command -v zsh),)
@@ -24,6 +24,10 @@ all: test_query.paf test_query.sam test_query.bam
 # Remove test output.
 clean:
 	rm -f test_query.paf test_query.sam test_query.bam
+	rm -f comparison_metrics.txt thermite_PBMC_10k_500k_reads_chrM.paf GRCh38-2020-A-chrM.fasta.tai
+
+# Metrics
+metrics: thermite_PBMC_10k_500k_reads_chrM.paf comparison_metrics.txt
 
 .DELETE_ON_ERROR:
 .SECONDARY:
@@ -43,3 +47,10 @@ clean:
 # Align the query to the reference (output bam).
 %.bam: $(ref).fasta.tai %.fastq
 	thermite align -a -k$k -o $@ $^
+
+# Get STAR comparison metrics
+comparison_metrics.txt: thermite_PBMC_10k_500k_reads_chrM.paf cellranger_namesorted_PBMC_10k_500k_reads_chrM.paf
+	python ../lib/testing/alignment_metrics.py cellranger_namesorted_PBMC_10k_500k_reads_chrM.paf $< > $@
+
+thermite_PBMC_10k_500k_reads_chrM.paf: $(ref).fasta.tai namesorted_PBMC_10k_500k_reads_chrM.fastq.gz
+	thermite align -k$k -o $@ $^
