--- a/data/Makefile
+++ b/data/Makefile
@@ -26,7 +26,7 @@ else ifeq ($(dataset),chrM)
 	aln=thermite_PBMC_10k_500k_reads_chrM
 	compare=cellranger_namesorted_PBMC_10k_500k_reads_chrM.paf
 	index_flags=
-	aln_flags=-s60 -k20 --min-total-hit-len=40
+	aln_flags=-s20 -k20 --min-total-hit-len=40
 else
 	$(error The dataset name $(dataset) is invalid!)
 endif
@@ -77,4 +77,4 @@ $(aln).bam: $(ref).fasta.tai $(query)
 
 # Get STAR comparison metrics.
 comparison_metrics.txt: $(aln).paf $(compare)
-	python ../lib/testing/alignment_metrics.py $(compare) $< > $@
+	python3 ../lib/testing/alignment_metrics.py $(compare) $< > $@
