Trancriptome alignment and alignment liftover (#14)
* Added code for reading annotations and creating transcripts

* Cargo fmt

* Added interval tree to track intersecting exons

* Cargo fmt

* Work in progress on producing full alignments

* Work in progress on lifting transcriptome alignments to genome

* Finished up main tx to genome lifting code

* Added cigar conversion and output tx and gene tags in BAMs

* cargo fmt

* Output unmapped records for BAM

* Better error message for invalid reference name

* Fixed indexing bugs and updated tests to support new features

* Added intron tests

* Added more splicing tests and fixed bugs

* Removed extra copy of index and fixed test

* Fixed CLI argument formatting

Co-authored-by: Shaun Jackman <sjackman@gmail.com>

* Add chrM genes gtf

* Updated Makefile to cleanly support both tests and metrics

* Set default min seed size to 20

* Fixed out of bounds bug when alignment terminates at the end of an exon

* cargo fmt

* Save faidx so it does not have to be generated in CI

* Updated comparison metrics

* Refactored aligner code and simplified it

* Added docs for all structs and functions

* Updated metrics

Co-authored-by: Shaun Jackman <sjackman@gmail.com>
Co-authored-by: emreerhan <emre.erhan@10xgenomics.com>

--- a/data/Makefile
+++ b/data/Makefile
@@ -3,11 +3,33 @@
 # Path to the thermite executable.
 export PATH:=../target/debug:${PATH}
 
-# The reference genome.
-ref=test_ref
+dataset=test
 
-# The minimum seed length.
-k=10
+ifeq ($(dataset),test)
+	# Use integration test data.
+	# Set the testing reference genome name.
+	ref=test_ref
+	# Set the testing reads file as the input.
+	query=test_query.fastq
+	# Set the name of the output files.
+	aln=test_query
+	# Set the file to compare to for metrics.
+	compare=
+	# Set flags for indexing.
+	index_flags=
+	# Set flags for alignment.
+	aln_flags=-s3 -k3 --min-total-hit-len=3
+else ifeq ($(dataset),chrM)
+	# Use the human mitochondrial genome data.
+	ref=GRCh38-2020-A-chrM
+	query=namesorted_PBMC_10k_500k_reads_chrM.fastq.gz
+	aln=thermite_PBMC_10k_500k_reads_chrM
+	compare=cellranger_namesorted_PBMC_10k_500k_reads_chrM.paf
+	index_flags=
+	aln_flags=-s20 -k20 --min-total-hit-len=40
+else
+	$(error The dataset name $(dataset) is invalid!)
+endif
 
 SHELL=bash -e -o pipefail
 ifneq ($(shell command -v zsh),)
@@ -19,38 +41,36 @@ export TIMEFMT=time user=%U system=%S elapsed=%E cpu=%P memory=%M job=%J
 endif
 
 # Test the Thermite aligner.
-all: test_query.paf test_query.sam test_query.bam
+all: $(aln).paf $(aln).sam $(aln).bam
+
+# Alignment metrics.
+metrics: comparison_metrics.txt
 
 # Remove test output.
 clean:
-	rm -f test_query.paf test_query.sam test_query.bam
-	rm -f comparison_metrics.txt thermite_PBMC_10k_500k_reads_chrM.paf GRCh38-2020-A-chrM.fasta.tai
-
-# Metrics
-metrics: thermite_PBMC_10k_500k_reads_chrM.paf comparison_metrics.txt
+	rm -f $(ref).fasta.tai
+	rm -f $(aln).paf $(aln).sam $(aln).bam
+	rm -f comparison_metrics.txt
 
 .DELETE_ON_ERROR:
 .SECONDARY:
 
 # Index the reference genome.
-%.fasta.tai: %.fasta
-	thermite index -o $@ $<
+$(ref).fasta.tai: $(ref).fasta $(ref).fasta.fai $(ref).gtf
+	thermite index $(index_flags) -o $@ $< $(ref).gtf
 
 # Align the query to the reference (output paf).
-%.paf: $(ref).fasta.tai %.fastq
-	thermite align -k$k -o $@ $^
+$(aln).paf: $(ref).fasta.tai $(query)
+	thermite align $(aln_flags) -o $@ $^
 
 # Align the query to the reference (output sam).
-%.sam: $(ref).fasta.tai %.fastq
-	thermite align -a -k$k -o $@ $^
+$(aln).sam: $(ref).fasta.tai $(query)
+	thermite align -a $(aln_flags) -o $@ $^
 
 # Align the query to the reference (output bam).
-%.bam: $(ref).fasta.tai %.fastq
-	thermite align -a -k$k -o $@ $^
+$(aln).bam: $(ref).fasta.tai $(query)
+	thermite align -a $(aln_flags) -o $@ $^
 
-# Get STAR comparison metrics
-comparison_metrics.txt: thermite_PBMC_10k_500k_reads_chrM.paf cellranger_namesorted_PBMC_10k_500k_reads_chrM.paf
-	python ../lib/testing/alignment_metrics.py cellranger_namesorted_PBMC_10k_500k_reads_chrM.paf $< > $@
-
-thermite_PBMC_10k_500k_reads_chrM.paf: $(ref).fasta.tai namesorted_PBMC_10k_500k_reads_chrM.fastq.gz
-	thermite align -k$k -o $@ $^
+# Get STAR comparison metrics.
+comparison_metrics.txt: $(aln).paf $(compare)
+	python3 ../lib/testing/alignment_metrics.py $(compare) $< > $@
