--- a/data/Makefile
+++ b/data/Makefile
@@ -18,7 +18,7 @@ ifeq ($(dataset),test)
 	# Set flags for indexing.
 	index_flags=
 	# Set flags for alignment.
-	aln_flags=-s3 -k3 --min-total-hit-len=3
+	aln_flags=-k3 --min-total-hit-len=3
 else ifeq ($(dataset),chrM)
 	# Use the human mitochondrial genome data.
 	ref=GRCh38-2020-A-chrM
@@ -26,7 +26,7 @@ else ifeq ($(dataset),chrM)
 	aln=thermite_PBMC_10k_500k_reads_chrM
 	compare=cellranger_namesorted_PBMC_10k_500k_reads_chrM.paf
 	index_flags=
-	aln_flags=-s20 -k20 --min-total-hit-len=40
+	aln_flags=-k20 --min-total-hit-len=40
 else
 	$(error The dataset name $(dataset) is invalid!)
 endif
