--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "^1.0.42"
 bincode = "^1.3.3"
-bio = "^0.37.0"
+bio_cratesio = { version = "^0.37.0", package = "bio" }
+bio = { version = "^0.37.0", git = "https://github.com/Daniel-Liu-c0deb0t/rust-bio", branch = "sampled-sa" }
 bio-types = "^0.12.0"
 clap = { version = "^3.0.0-beta.2", features = ["derive"] }
 needletail = "^0.4.1"
