Temporarily disable metric tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,16 +40,16 @@ jobs:
         run: cargo check --all-targets
       - name: Run cargo build
         run: cargo build
-      - name: Install py requirements
-        run: pip install pysam
-      - name: Run metric test
-        run: |
-          cd data/
-          make metrics dataset=chrM
-      - uses: machine-learning-apps/pr-comment@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          path: data/comparison_metrics.txt
-      - name: Check if comparison metrics have changed
-        run: diff data/comparison_metrics.txt lib/testing/comparison_metrics.txt
+      # - name: Install py requirements
+      #   run: pip install pysam
+      # - name: Run metric test
+      #   run: |
+      #     cd data/
+      #     make metrics dataset=chrM
+      # - uses: machine-learning-apps/pr-comment@master
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     path: data/comparison_metrics.txt
+      # - name: Check if comparison metrics have changed
+      #   run: diff data/comparison_metrics.txt lib/testing/comparison_metrics.txt
