--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bincode = "^1.3.3"
 bio = { version = "^0.37.1", features = ["runtime-dispatch-simd"] }
 bio-types = "^0.12.0"
 clap = { version = "^3.0.0-beta.2", features = ["derive"] }
+libdivsufsort-rs = "^0.1.1"
 needletail = "^0.4.1"
 noodles = { version = "^0.1.0", features = ["bam", "core", "gff", "sam"] }
 rayon = "^1.5.1"
