--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,10 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "^1.0.42"
 bincode = "^1.3.3"
-bio = "^0.37.0"
+bio = { version = "^0.37.1", features = ["runtime-dispatch-simd"] }
 bio-types = "^0.12.0"
 clap = { version = "^3.0.0-beta.2", features = ["derive"] }
+libdivsufsort-rs = "^0.1.1"
 needletail = "^0.4.1"
 noodles = { version = "^0.1.0", features = ["bam", "core", "gff", "sam"] }
 rayon = "^1.5.1"
