--- a/data/Makefile
+++ b/data/Makefile
@@ -22,17 +22,9 @@ ifeq ($(dataset),test)
 else ifeq ($(dataset),chrM)
 	# Use the human mitochondrial genome data.
 	ref=GRCh38-2020-A-chrM
-	query=pbmc10k_chrM_500k_reads.fastq.gz
-	aln=thermite_pbmc10k_chrM_500k_reads
-	compare=cellranger_pbmc10k_chrM_500k_reads.bam
-	index_flags=
-	aln_flags=-k20 --min-total-hit-len=40
-else ifeq ($(dataset), chr21)
-	# Use chromosome 21 dataset.
-	ref=GRCh38-2020-A-chr21
-	query=pbmc10k_chr21_500k_reads.fastq.gz
-	aln=thermite_pbmc10k_chr21_500k_reads
-	compare=cellranger_pbmc10k_chr21_500k_reads.bam
+	query=namesorted_PBMC_10k_500k_reads_chrM.fastq.gz
+	aln=thermite_PBMC_10k_500k_reads_chrM
+	compare=cellranger_namesorted_PBMC_10k_500k_reads_chrM.paf
 	index_flags=
 	aln_flags=-k20 --min-total-hit-len=40
 else
