--- a/data/Makefile
+++ b/data/Makefile
@@ -24,7 +24,7 @@ else ifeq ($(dataset),chrM)
 	ref=GRCh38-2020-A-chrM
 	query=pbmc10k_chrM_500k_reads.fastq.gz
 	aln=thermite_pbmc10k_chrM_500k_reads
-	compare=cellranger_pbmc10k_chrM_500k_reads.sam
+	compare=cellranger_pbmc10k_chrM_500k_reads.bam
 	index_flags=
 	aln_flags=-k20 --min-total-hit-len=40
 else ifeq ($(dataset), chr21)
@@ -32,7 +32,7 @@ else ifeq ($(dataset), chr21)
 	ref=GRCh38-2020-A-chr21
 	query=pbmc10k_chr21_500k_reads.fastq.gz
 	aln=thermite_pbmc10k_chr21_500k_reads
-	compare=cellranger_pbmc10k_chr21_500k_reads.sam
+	compare=cellranger_pbmc10k_chr21_500k_reads.bam
 	index_flags=
 	aln_flags=-k20 --min-total-hit-len=40
 else
@@ -80,7 +80,9 @@ $(aln).sam: $(ref).fasta.tai $(query)
 # Align the query to the reference (output bam).
 $(aln).bam: $(ref).fasta.tai $(query)
 	thermite align -a $(aln_flags) -o $@ $^
+	samtools sort -n $@ > temp.bam
+	mv temp.bam $@
 
 # Get STAR comparison metrics.
-comparison_metrics.txt: $(aln).sam $(compare)
+comparison_metrics.txt: $(aln).bam $(compare)
 	python3 ../lib/testing/alignment_metrics.py $(compare) $< > $@
