--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,19 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "^1.0.42"
 bincode = "^1.3.3"
-bio = { version = "^0.37.1", features = ["runtime-dispatch-simd"] }
+bio = {version = "^0.37.1", features = ["runtime-dispatch-simd"]}
 bio-types = "^0.12.0"
-clap = { version = "^3.0.0-beta.2", features = ["derive"] }
+clap = {version = "^3.0.0-beta.2", features = ["derive"]}
+csv = "1.1"
+failure = "0.1.6"
+flate2 = "1.0.20"
 libdivsufsort-rs = "^0.1.1"
 needletail = "^0.4.1"
-noodles = { version = "^0.1.0", features = ["bam", "core", "gff", "sam"] }
+nom = {version = "5.1.2", default-features = false}
+noodles = {version = "^0.1.0", features = ["bam", "core", "gff", "sam"]}
 rust-htslib = "^0.38.2"
-serde = { version = "^1.0", features = ["derive"] }
-transcriptome = { version = "^0.1.0", git = "https://github.com/10XDev/cellranger" }
+serde = {version = "^1.0", features = ["derive"]}
+smallvec = "1.6"
 
 [profile.dev]
 opt-level = 3
