--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,14 +39,16 @@ jobs:
       - name: Run cargo check
         run: cargo check --all-targets
       - name: Run cargo build
-        run: cargo build
+        run: cargo build --release
+      - name: Run cargo test
+        run: cargo test
       - name: Install py requirements
         run: pip install pysam
       - name: Run metric test
         run: |
           cd data/
-          make metrics dataset=chr21
           make metrics dataset=chrM
+          make metrics dataset=chr21
           cat chr21_comparison_metrics.txt chrM_comparison_metrics.txt > comparison_metrics.txt
       - uses: machine-learning-apps/pr-comment@master
         env:
