--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run cargo check
         run: cargo check --all-targets
       - name: Run cargo build
-        run: cargo build --release
+        run: cargo build
       - name: Run cargo test
         run: cargo test
       - name: Install py requirements
