New metrics and new data (#24)
* Add new dataset

* Use new dataset and only use bam

* Only use bam files, and add new metrics

* namesort cr bam

* latest metric

* use chr21

* chr21 genes

* chr21

* add datasets

* use pysam to sort

* update comparison metrics

* add gene concordance calculation

* add gene overlap and modify identical reads calculation

* new metrics

* new metrics

* Add chrm and chr21 workflow

* Add chrm and chr21 workflow

* Add chrM dataset

* Add chrM dataset

* Add rounding

* more rounding

* metrics w/ rounding

* more rounding

* more rounding

* Minor fixes

* New metrics

* Metric reporting upgrade

* Add cargo test and minor changes

* Add cargo test and minor changes

* remove release flag

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,12 +40,16 @@ jobs:
         run: cargo check --all-targets
       - name: Run cargo build
         run: cargo build
+      - name: Run cargo test
+        run: cargo test
       - name: Install py requirements
         run: pip install pysam
       - name: Run metric test
         run: |
           cd data/
           make metrics dataset=chrM
+          make metrics dataset=chr21
+          cat chr21_comparison_metrics.txt chrM_comparison_metrics.txt > comparison_metrics.txt
       - uses: machine-learning-apps/pr-comment@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
