Cellranger integration and intron mode (#25)
* Added Orbit-like wrapper

* Add absolute min score threshold

* Added some getters

* Fixed problems in cellranger integration

* Made ThermiteAligner Send

* Fixed mutable borrow

* Estimate memory usage by examining index file size

* Better error message for estimating memory

* Work in progress on intronic mode

* More work on genome alignment

* Removed fast path for exact match because it is unnecessary

* Added code for outputting correct tags

* Finished SWG alignment

* Fixed many bugs so intronic alignments compiles and runs

* Optimized SA type conversion and reduced size of ref seq

* Fixed small bug in inferring sequence slice

* Added intron mode flag

* Fix indexing issue with implicit reversed reference

* Added some unit tests

* Allow cellranger transcriptome crate to be disabled

* Fixed edge case of outputting alignment xclip

* Disable default features of htslib

* Use flattened trace vector

* Temporary debug code

* Debug code

* Debug

* Remove newline at the end of noodles sam

* Remove extra flags when using with cellranger

* Update makefile parameters

* Removed extraneous files

* Updated gitignore

* Debug

* Handle empty sequences

* Added more tags and added exact match optimization

* Small improvements to error handling

* Print mismatching alignments

* Small fixes to match STAR

* Print reference regions in addition to sam records

* Account for multimapping in metrics and small fixes

--- a/data/Makefile
+++ b/data/Makefile
@@ -18,7 +18,7 @@ ifeq ($(dataset),test)
 	# Set flags for indexing.
 	index_flags=
 	# Set flags for alignment.
-	aln_flags=-k3 --min-total-hit-len=3
+	aln_flags=-k3 --min-aln-score=0
 else ifeq ($(dataset),chrM)
 	# Use the human mitochondrial genome data.
 	ref=GRCh38-2020-A-chrM
@@ -27,7 +27,7 @@ else ifeq ($(dataset),chrM)
 	aln=thermite_pbmc10k_chrM_500k_reads
 	compare=cellranger_pbmc10k_chrM_500k_reads.bam
 	index_flags=
-	aln_flags=-k20 --min-total-hit-len=40
+	aln_flags=-k20 -s0 --intron-mode
 else ifeq ($(dataset), chr21)
 	# Use chromosome 21 dataset.
 	ref=GRCh38-2020-A-chr21
@@ -36,7 +36,7 @@ else ifeq ($(dataset), chr21)
 	aln=thermite_pbmc10k_chr21_500k_reads
 	compare=cellranger_pbmc10k_chr21_500k_reads.bam
 	index_flags=
-	aln_flags=-k20 --min-total-hit-len=40
+	aln_flags=-k20 -s0 --intron-mode
 else
 	$(error The dataset name $(dataset) is invalid!)
 endif
@@ -54,13 +54,13 @@ endif
 all: $(aln).paf $(aln).sam $(aln).bam
 
 # Alignment metrics.
-metrics: chr$(chr)_comparison_metrics.txt
+metrics: $(dataset)_comparison_metrics.txt
 
 # Remove test output.
 clean:
 	rm -f $(ref).fasta.tai
 	rm -f $(aln).paf $(aln).sam $(aln).bam
-	rm -f comparison_metrics.txt
+	rm -f $(dataset)_comparison_metrics.txt
 
 .DELETE_ON_ERROR:
 .SECONDARY:
@@ -82,5 +82,5 @@ $(aln).bam: $(ref).fasta.tai $(query)
 	thermite align -a $(aln_flags) -o $@ $^
 
 # Get STAR comparison metrics.
-chr$(chr)_comparison_metrics.txt: $(aln).bam $(compare)
+$(dataset)_comparison_metrics.txt: $(aln).bam $(compare)
 	python3 ../lib/testing/alignment_metrics.py $(compare) $< > $@
