--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ clap = { version = "^3.0.0-beta.2", features = ["derive"] }
 libdivsufsort-rs = "^0.1.1"
 needletail = "^0.4.1"
 noodles = { version = "^0.1.0", features = ["bam", "core", "gff", "sam"] }
-rayon = "^1.5.1"
+rust-htslib = { version = "^0.38.2", default-features = false }
 serde = { version = "^1.0", features = ["derive"] }
-transcriptome = { version = "^0.1.0", git = "https://github.com/10XDev/cellranger" }
+transcriptome = { version = "^0.1.0", git = "https://github.com/10XDev/cellranger", optional = true }
 
 [profile.dev]
 opt-level = 3
@@ -37,3 +37,6 @@ lto = true
 
 [profile.test]
 opt-level = 3
+
+[features]
+default = ["transcriptome"]
