--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ anyhow = "^1.0.42"
 bincode = "^1.3.3"
 bio = { version = "^0.37.1", features = ["runtime-dispatch-simd"] }
 bio-types = "^0.12.0"
-bio_opt = { package = "bio", version = "^0.37.1", git = "https://github.com/Daniel-Liu-c0deb0t/rust-bio", branch = "optimize", features = ["runtime-dispatch-simd"] }
+bio_opt = { package = "bio", version = "^0.37.1", git = "https://github.com/sjackman/rust-bio", branch = "sj/prefetch", features = ["runtime-dispatch-simd"] }
 block-aligner = { version = "^0.2.0", features = ["simd_avx2"] }
 clap = { version = "^3.0.0-beta.2", features = ["derive"] }
 libdivsufsort-rs = "^0.1.1"
